web-infras/parser/tests/fixtures/babel/core/uncategorised/496/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,16)
1|function hello(arguments) {'use strict';}
 |              ^
